--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0037.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0037.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0037.png">
-      <!--<div class="ocr_carea" title="bbox 138 184 1936 3230">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 910 191 1920 229">
         <span id="w_0" class="ocr_word" title="bbox 910 193 1177 228">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 174 299 1920 358">
         <span id="w_2" class="ocr_word" title="bbox 174 302 325 345">
           <span class="alternatives">
@@ -476,17 +472,11 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1758 804 1916 861">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cogita-</ins>
+            <ins title="nlp 2.00">cogitationibus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 169 873 1916 932">
-        <span id="w_75" class="ocr_word" title="bbox 169 874 360 917">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tionibus</ins>
-            <del title="nlp 0.90">cogitationibus</del>
-          </span>
-        </span>
         <span id="w_76" class="ocr_word" title="bbox 385 875 554 917">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">efficere</ins>
@@ -587,17 +577,11 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1797 946 1917 989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scho-</ins>
+            <ins title="nlp 2.00">scholam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 169 1017 1916 1075">
-        <span id="w_93" class="ocr_word" title="bbox 169 1018 254 1060">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lam</ins>
-            <del title="nlp 0.90">scholam</del>
-          </span>
-        </span>
         <span id="w_94" class="ocr_word" title="bbox 287 1017 593 1061">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sententiarum</ins>
@@ -748,17 +732,11 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1803 1164 1915 1204">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tene-</ins>
+            <ins title="nlp 2.00">tenebant</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 167 1231 1913 1290">
-        <span id="w_119" class="ocr_word" title="bbox 167 1231 272 1275">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bant</ins>
-            <del title="nlp 0.90">tenebant</del>
-          </span>
-        </span>
         <span id="w_120" class="ocr_word" title="bbox 319 1233 592 1289">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">gravissimas</ins>
@@ -1009,17 +987,11 @@
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1795 1535 1911 1563">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enar-</ins>
+            <ins title="nlp 2.00">enarrationem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 163 1589 1912 1649">
-        <span id="w_161" class="ocr_word" title="bbox 163 1591 371 1633">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rationem</ins>
-            <del title="nlp 0.90">enarrationem</del>
-          </span>
-        </span>
         <span id="w_162" class="ocr_word" title="bbox 404 1590 623 1634">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Posidonii</ins>
@@ -1114,17 +1086,11 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 1852 1667 1912 1707">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ta-</ins>
+            <ins title="nlp 2.00">talium</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 162 1731 1912 1792">
-        <span id="w_178" class="ocr_word" title="bbox 162 1732 268 1776">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lium</ins>
-            <del title="nlp 0.90">talium</del>
-          </span>
-        </span>
         <span id="w_179" class="ocr_word" title="bbox 314 1731 557 1790">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eclogarum</ins>
@@ -1211,17 +1177,11 @@
             <del title="nlp 0.90">discrepantias</del>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1633 1806 1911 1864">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">philosopho-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 161 1877 897 1921">
         <span id="w_194" class="ocr_word" title="bbox 161 1891 256 1919">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rum</ins>
-            <del title="nlp 0.90">philosophorum</del>
+            <ins title="nlp 2.00">philosophorum</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 288 1891 340 1919">
@@ -1249,8 +1209,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 280 1947 1910 2007">
         <span id="w_199" class="ocr_word" title="bbox 280 1947 434 1992">
           <span class="alternatives">
@@ -1302,17 +1260,11 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1808 1966 1910 2007">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quo-</ins>
+            <ins title="nlp 2.00">quoque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 161 2021 1906 2078">
-        <span id="w_208" class="ocr_word" title="bbox 161 2034 242 2076">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">quoque</del>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 268 2023 410 2077">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">partes</ins>
@@ -1361,14 +1313,14 @@
             <del title="nlp 0.90">de</del>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1687 2025 1713 2077" xml:lang="grc">
+        <span id="w_217" class="ocr_word" title="bbox 1687 2025 1713 2077" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ζ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1733 2023 1789 2065" xml:lang="grc">
+        <span id="w_218" class="ocr_word" title="bbox 1733 2023 1789 2065" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">3Μ</ins>
+            <ins title="nlp 2.00">39—41</ins>
           </span>
         </span>
       </span>
@@ -1489,19 +1441,13 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 1834 2165 1909 2209" xml:lang="grc">
+        <span id="w_238" class="ocr_word" title="bbox 1834 2165 1909 2209" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Ζθ</ins>
+            <ins title="nlp 2.00">Zenone</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 158 2234 1908 2294">
-        <span id="w_239" class="ocr_word" title="bbox 158 2248 271 2278">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">none</ins>
-            <del title="nlp 0.90">none</del>
-          </span>
-        </span>
         <span id="w_240" class="ocr_word" title="bbox 301 2234 499 2278">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Tarsensi</ins>
@@ -1770,7 +1716,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1247 2526 1273 2578">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1293 2523 1351 2566">
@@ -1854,22 +1800,22 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 2663 1903 2725">
-        <span id="w_297" class="ocr_word" title="bbox 157 2663 267 2720" xml:lang="grc">
+        <span id="w_297" class="ocr_word" title="bbox 157 2663 267 2720" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φασὶ</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 280 2690 328 2695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 340 2665 458 2708" xml:lang="grc">
+        <span id="w_299" class="ocr_word" title="bbox 340 2665 458 2708" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθά</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 478 2677 587 2722" xml:lang="grc">
+        <span id="w_300" class="ocr_word" title="bbox 478 2677 587 2722" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησι</ins>
           </span>
@@ -1910,12 +1856,12 @@
             <del title="nlp 0.90">a</del>
           </span>
         </span>
-        <span id="w_307" class="ocr_word" title="bbox 1491 2668 1608 2710" xml:lang="grc">
+        <span id="w_307" class="ocr_word" title="bbox 1491 2668 1608 2710" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθά</ins>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 1634 2679 1743 2723" xml:lang="grc">
+        <span id="w_308" class="ocr_word" title="bbox 1634 2679 1743 2723" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησι</ins>
           </span>
@@ -1934,15 +1880,12 @@
             <del title="nlp 0.90">ad</del>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 243 2743 333 2780" xml:lang="grc">
+        <span id="w_311" class="ocr_word" title="bbox 243 2743 333 2780" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">τ·ν</ins>
-            <del title="nlp 0.90">τἀν</del>
-            <del title="nlp 0.89">τἂν</del>
-            <del title="nlp 0.88">τἄν</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 370 2738 570 2780" xml:lang="grc">
+        <span id="w_312" class="ocr_word" title="bbox 370 2738 570 2780" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθόλου</ins>
           </span>
@@ -1991,17 +1934,11 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1733 2742 1903 2782">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">contex-</ins>
+            <ins title="nlp 2.00">contextum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 2807 1901 2866">
-        <span id="w_321" class="ocr_word" title="bbox 156 2810 247 2852">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tum</ins>
-            <del title="nlp 0.90">contextum</del>
-          </span>
-        </span>
         <span id="w_322" class="ocr_word" title="bbox 281 2807 505 2852">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">inculcato.</ins>
@@ -2058,12 +1995,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 155 2878 1901 2938">
-        <span id="w_331" class="ocr_word" title="bbox 155 2883 274 2922" xml:lang="grc">
+        <span id="w_331" class="ocr_word" title="bbox 155 2883 274 2922" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">κα8ὰ</ins>
-            <del title="nlp 0.90">καθὰ</del>
-            <del title="nlp 0.89">κακὰ</del>
-            <del title="nlp 0.88">καλὰ</del>
+            <ins title="nlp 2.00">καθὰ</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 299 2878 481 2936">
@@ -2072,7 +2006,7 @@
             <del title="nlp 0.90">legimus</del>
           </span>
         </span>
-        <span id="w_333" class="ocr_word" title="bbox 508 2880 577 2932" xml:lang="grc">
+        <span id="w_333" class="ocr_word" title="bbox 508 2880 577 2932" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὃς.</ins>
           </span>
@@ -2231,27 +2165,19 @@
             <del title="nlp 0.90">inducitur,</del>
           </span>
         </span>
-        <span id="w_359" class="ocr_word" title="bbox 1805 3026 1899 3069" xml:lang="grc">
+        <span id="w_359" class="ocr_word" title="bbox 1805 3026 1899 3069" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">δια-</ins>
+            <ins title="nlp 2.00">διαφερόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 155 3095 1899 3153">
-        <span id="w_360" class="ocr_word" title="bbox 155 3095 399 3150" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">φιρόμενος</ins>
-            <del title="nlp 0.90">διαφερόμενος</del>
-            <del title="nlp 0.89">διαφθειρόμενος</del>
-            <del title="nlp 0.88">διαπειρόμενος</del>
-          </span>
-        </span>
-        <span id="w_361" class="ocr_word" title="bbox 435 3109 546 3151" xml:lang="grc">
+        <span id="w_361" class="ocr_word" title="bbox 435 3109 546 3151" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_362" class="ocr_word" title="bbox 583 3097 740 3151" xml:lang="grc">
+        <span id="w_362" class="ocr_word" title="bbox 583 3097 740 3151" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὑτόν,</ins>
           </span>
@@ -2282,7 +2208,7 @@
         </span>
         <span id="w_367" class="ocr_word" title="bbox 1464 3099 1490 3151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1519 3097 1601 3140">
@@ -2296,32 +2222,29 @@
             <del title="nlp 0.90">exstant:</del>
           </span>
         </span>
-        <span id="w_370" class="ocr_word" title="bbox 1875 3096 1899 3141" xml:lang="grc">
+        <span id="w_370" class="ocr_word" title="bbox 1875 3096 1899 3141" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 153 3165 1899 3225">
-        <span id="w_371" class="ocr_word" title="bbox 153 3165 305 3222" xml:lang="grc">
+        <span id="w_371" class="ocr_word" title="bbox 153 3165 305 3222" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Αντοι</ins>
-            <del title="nlp 0.90">ἄητοι</del>
-            <del title="nlp 0.89">ἄρτοι</del>
-            <del title="nlp 0.88">ἄωτοι</del>
+            <ins title="nlp 2.00">μέντοι</ins>
           </span>
         </span>
-        <span id="w_372" class="ocr_word" title="bbox 339 3169 599 3223" xml:lang="grc">
+        <span id="w_372" class="ocr_word" title="bbox 339 3169 599 3223" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Χρύσιππος</ins>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 642 3167 976 3225" xml:lang="grc">
+        <span id="w_373" class="ocr_word" title="bbox 642 3167 976 3225" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφορώτερον</ins>
           </span>
         </span>
-        <span id="w_374" class="ocr_word" title="bbox 1018 3168 1152 3211" xml:lang="grc">
+        <span id="w_374" class="ocr_word" title="bbox 1018 3168 1152 3211" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πόλιν</ins>
           </span>
@@ -2357,8 +2280,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
