--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0042.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0042.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0042.png">
-      <!--<div class="ocr_carea" title="bbox 334 184 2114 3192">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 350 191 1348 229">
         <span id="w_0" class="ocr_word" title="bbox 350 194 446 229">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 349 297 2080 357">
         <span id="w_2" class="ocr_word" title="bbox 349 304 472 357">
           <span class="alternatives">
@@ -140,17 +136,11 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1916 368 2081 424">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">negleo-</ins>
+            <ins title="nlp 2.00">neglectus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 350 437 2082 497">
-        <span id="w_21" class="ocr_word" title="bbox 350 446 421 485">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tus</ins>
-            <del title="nlp 0.90">negleotus</del>
-          </span>
-        </span>
         <span id="w_22" class="ocr_word" title="bbox 453 444 582 497">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esset,</ins>
@@ -251,17 +241,11 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1953 508 2084 564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Didy-</ins>
+            <ins title="nlp 2.00">Didymum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 352 579 2085 640">
-        <span id="w_39" class="ocr_word" title="bbox 352 599 468 627">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mum</ins>
-            <del title="nlp 0.90">Didymum</del>
-          </span>
-        </span>
         <span id="w_40" class="ocr_word" title="bbox 499 582 683 640">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vestigia</ins>
@@ -280,12 +264,9 @@
             <del title="nlp 0.90">ita</del>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1136 596 1263 637" xml:lang="grc">
+        <span id="w_43" class="ocr_word" title="bbox 1136 596 1263 637" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">pοαο</ins>
-            <del title="nlp 0.90">βοαὶ</del>
-            <del title="nlp 0.89">βοαί</del>
-            <del title="nlp 0.88">θοαὶ</del>
+            <ins title="nlp 2.00">porro</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1296 581 1410 637">
@@ -314,17 +295,11 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1911 579 2085 621">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Kreutt-</ins>
+            <ins title="nlp 2.00">Kreuttnero</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 352 649 2084 709">
-        <span id="w_49" class="ocr_word" title="bbox 352 670 454 697">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nero</ins>
-            <del title="nlp 0.90">Kreuttnero</del>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 487 655 826 697">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">demonstratum</ins>
@@ -417,17 +392,11 @@
             <del title="nlp 0.90">inveniantur</del>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 2028 719 2087 762" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Κ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 356 796 986 839">
         <span id="w_66" class="ocr_word" title="bbox 356 811 575 839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">versorum</ins>
-            <del title="nlp 0.90">versorum</del>
+            <ins title="nlp 2.00">diversorum</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 608 798 830 837">
@@ -443,8 +412,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 472 861 2086 922">
         <span id="w_69" class="ocr_word" title="bbox 472 866 604 909">
           <span class="alternatives">
@@ -726,17 +693,11 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1841 1146 2091 1201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">compilato-</ins>
+            <ins title="nlp 2.00">compilatorem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 1216 2092 1276">
-        <span id="w_115" class="ocr_word" title="bbox 356 1237 445 1264">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rem</ins>
-            <del title="nlp 0.90">compilatorem</del>
-          </span>
-        </span>
         <span id="w_116" class="ocr_word" title="bbox 479 1222 707 1264">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">accessisse</ins>
@@ -793,17 +754,11 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1999 1216 2092 1259">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nul-</ins>
+            <ins title="nlp 2.00">nullus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 357 1288 2091 1349">
-        <span id="w_126" class="ocr_word" title="bbox 357 1293 425 1335">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lus</ins>
-            <del title="nlp 0.90">nullus</del>
-          </span>
-        </span>
         <span id="w_127" class="ocr_word" title="bbox 458 1295 634 1348">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">apparet</ins>
@@ -966,17 +921,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1964 1430 2094 1484">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scrip-</ins>
+            <ins title="nlp 2.00">scriptorem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 359 1501 2093 1562">
-        <span id="w_154" class="ocr_word" title="bbox 359 1507 496 1547">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">torem</ins>
-            <del title="nlp 0.90">scriptorem</del>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 535 1506 673 1562">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">magis</ins>
@@ -1269,17 +1218,11 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 2004 1785 2095 1826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bre-</ins>
+            <ins title="nlp 2.00">breviatis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 361 1855 2094 1913">
-        <span id="w_203" class="ocr_word" title="bbox 361 1861 488 1902">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">viatis</ins>
-            <del title="nlp 0.90">breviatis</del>
-          </span>
-        </span>
         <span id="w_204" class="ocr_word" title="bbox 518 1875 598 1903">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">nec</ins>
@@ -1454,17 +1397,11 @@
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1932 1997 2096 2039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dubita-</ins>
+            <ins title="nlp 2.00">dubitationem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 362 2067 2092 2130">
-        <span id="w_233" class="ocr_word" title="bbox 362 2075 523 2116">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tionem</ins>
-            <del title="nlp 0.90">dubitationem</del>
-          </span>
-        </span>
         <span id="w_234" class="ocr_word" title="bbox 567 2074 806 2130">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">profligabo</ins>
@@ -1589,17 +1526,11 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 2002 2154 2097 2181">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auc-</ins>
+            <ins title="nlp 2.00">auctoris</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 363 2210 2098 2271">
-        <span id="w_255" class="ocr_word" title="bbox 363 2217 470 2258">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">toris</ins>
-            <del title="nlp 0.90">auctoris</del>
-          </span>
-        </span>
         <span id="w_256" class="ocr_word" title="bbox 501 2215 692 2271">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">physicis</ins>
@@ -1644,17 +1575,11 @@
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1991 2210 2098 2266">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">phy-</ins>
+            <ins title="nlp 2.00">physicis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 364 2283 2098 2343">
-        <span id="w_264" class="ocr_word" title="bbox 364 2288 465 2330">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sicis</ins>
-            <del title="nlp 0.90">physicis</del>
-          </span>
-        </span>
         <span id="w_265" class="ocr_word" title="bbox 498 2286 789 2329">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">doctissimam</ins>
@@ -1687,17 +1612,11 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 2014 2296 2098 2323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">me-</ins>
+            <ins title="nlp 2.00">memoriam,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 365 2355 2096 2413">
-        <span id="w_271" class="ocr_word" title="bbox 365 2359 561 2413">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">moriam,</ins>
-            <del title="nlp 0.90">memoriam,</del>
-          </span>
-        </span>
         <span id="w_272" class="ocr_word" title="bbox 606 2359 649 2399">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in</ins>
@@ -2381,8 +2300,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
